Closed
Bug 242550
Opened 21 years ago
Closed 16 years ago
Filter criterion "doesn't contain" and "isn't" not found in user defined header fields (IMAP)
Categories
(MailNews Core :: Filters, defect)
MailNews Core
Filters
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0b4
People
(Reporter: Gunther.Heintzen, Assigned: rkent)
References
Details
Attachments
(1 file)
|
1.37 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7b) Gecko/20040421
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7b) Gecko/20040421
I can't find the Filter rule "doesn't contain" in user defined headers fields
in mozilla-1.7rc1.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Comment 1•21 years ago
|
||
Gunther Heintzen: I'm assuming you mean when defining filters for an IMAP
account? I see "Doesn't Contain" when defining filters for a POP3 account, but
not for IMAP.
Reproduced problem with
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a) Gecko/20040422
See also bug 238816: these options are also not implemented for Message Search,
or for a customized MailView.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Reporter | ||
Comment 2•21 years ago
|
||
But why is "doesn't contain" in the File rule "Subject"
Why have older releases of Mozilla the rule "doesn't contain" in other
selections than "Subject"
Comment 3•21 years ago
|
||
taking - I fixed this for local but I guess not for IMAP.
Assignee: sspitzer → bienvenu
Component: Mail Window Front End → Filters
Updated•21 years ago
|
Summary: Filter rule "doesn't contain" not found in user defined header fields → Filter criterion "doesn't contain" not found in user defined header fields (IMAP)
Comment 4•21 years ago
|
||
For user-defined headers, "isn't" is also absent (verified on an IMAP account).
I am not sure if this should be listed as another bug...it seems like this bug
would be appropriate.
Updated•21 years ago
|
Product: MailNews → Core
Comment 5•20 years ago
|
||
*** Bug 269152 has been marked as a duplicate of this bug. ***
Comment 6•20 years ago
|
||
This bug pales in importance next to bug 184490.
Comment 7•20 years ago
|
||
Thanks for taking to time to compare bug reports,
and note which one YOU THINK is important.
Comment 8•20 years ago
|
||
*** Bug 324326 has been marked as a duplicate of this bug. ***
Comment 9•20 years ago
|
||
*** Bug 327149 has been marked as a duplicate of this bug. ***
Updated•18 years ago
|
Assignee: bienvenu → nobody
OS: Windows XP → All
QA Contact: filters
Hardware: PC → All
Updated•17 years ago
|
Product: Core → MailNews Core
Updated•16 years ago
|
Summary: Filter criterion "doesn't contain" not found in user defined header fields (IMAP) → Filter criterion "doesn't contain" and "isn't" not found in user defined header fields (IMAP)
| Assignee | ||
Updated•16 years ago
|
Assignee: nobody → kent
Status: NEW → ASSIGNED
Comment 16•16 years ago
|
||
Four years old bug for something which looks like missing values of a variable somewhere!
Flags: wanted1.9.2?
Flags: wanted-thunderbird3?
| Assignee | ||
Comment 17•16 years ago
|
||
Bug 127250 switches the filter capability for IMAP, when the user has folders selected for offline use (the default), to use the offline mail filter table, which includes the two missing terms from this bug. So this bug will then be solved for the IMAP incoming context. For manual context, the validity table is the same as for search, which will be solved in bug 238816.
For the IMAP manual context case, this bug is also wrapped up with the complex issues of manual filtering (search) of custom headers, which have been discussed at length in bug 184490. When those issues are solved, presumably any issues associated with correct search operators will be solved at the same time.
So I don't think there is anything more that will need to be done on this bug. I'll reexamine it after bug 127250 lands, and probably resolve as FIXED then.
Whiteboard: [will be fixed in bug 127250]
| Assignee | ||
Comment 18•16 years ago
|
||
Forget about all those other bugs, let's just get the validity table oversight fixed and close this. I probably should have done this in bug 238816. The search operator just works, it just needs to be enabled in the validity table.
Attachment #398166 -
Flags: superreview?(bienvenu)
Attachment #398166 -
Flags: review?(bienvenu)
| Assignee | ||
Updated•16 years ago
|
Whiteboard: [will be fixed in bug 127250] → [needs r/sr bienvenu]
Updated•16 years ago
|
Attachment #398166 -
Flags: superreview?(bienvenu)
Attachment #398166 -
Flags: superreview+
Attachment #398166 -
Flags: review?(bienvenu)
Attachment #398166 -
Flags: review+
| Assignee | ||
Updated•16 years ago
|
Keywords: checkin-needed
Whiteboard: [needs r/sr bienvenu] → [needs checkin]
Comment 19•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: wanted1.9.2?
Flags: wanted-thunderbird3?
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs checkin]
Target Milestone: --- → Thunderbird 3.0b4
You need to log in
before you can comment on or make changes to this bug.
Description
•