Bug 242550 - "Filter criterion "doesn't contain" and "isn't" not found in user defined header fields (IMAP)" [r+sr=bienvenu]